--- a/index.html
+++ b/index.html
@@ -5,44 +5,60 @@
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap" rel="stylesheet" />
    <title>Barbershop</title>
    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
    <!-- header -->
-   <header>
-      <a href="./index.html">
+
+   <header class="header">
+      <a class="header-logo" href="./index.html">
          <img src="images/logo.svg" alt="лого сайта" />
       </a>
-      <nav>
-         <ul>
-            <li><a href="">О нас</a></li>
-            <li><a href="">Услуги и цены</a></li>
-            <li><a href="">Мастера</a></li>
-            <li><a href="">Контакты</a></li>
+      <nav class="header-nav">
+         <ul class="header-list list">
+            <li class="header-items">
+               <a href="https://www.google.com/" class="heder-link link">О нас</a>
+            </li>
+            <li class="header-items">
+               <a href="./portfolio.html" class="header-link link">Услуги и цены</a>
+            </li>
+            <li class="header-items">
+               <a href="#masters" class="header-link link">Мастера</a>
+            </li>
+            <li class="header-items">
+               <a href="https://www.google.com/" class="header-link link">Контакты</a>
+            </li>
          </ul>
       </nav>
-      <a href="tel:+380441111111">+38 044 111 11 11</a>
-      <button type="button">Онлайн-запись</button>
+      <a class="header-tel link" href="tel:+380441111111">+38 044 111 11 11</a>
+      <button type="button" class="header-btn btn">Онлайн-запись</button>
    </header>
    <main>
       <!-- Section-1 -->
-      <section>
-         <ul>
-            <li>
-               <a href="" target="_blank">Instagram</a>
+      <section class="hero">
+         <ul class="hero-list list">
+            <li class=" hero-item">
+               <a href="" target="_blank" class="hero-link link">Instagram</a>
             </li>
-            <li>
-               <a href="" target="_blank">Youtube</a>
+            <li class=" hero-item">
+                  <a href="" target=" _blank" class="hero-link link">Youtube</a>
             </li>
          </ul>
-         <p lang="en">A hair salon for men in Kyiv</p>
-         <h1 lang="en">BarberShop</h1>
-         <p>
-            Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со
-            вкусом.
-         </p>
+         <div class="hero-content">
+            <p lang="en" class="hero-pre-title pre-title">
+               A hair salon for men in Kyiv
+            </p>
+            <h1 lang="en" class="hero-title">BarberShop</h1>
+            <p class="hero-after-title">
+               Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со
+               вкусом.
+            </p>
+         </div>
       </section>
       <!-- Section-2 -->
       <section>
